# SFML-Solar

./: .gitignore  CMakeLists.txt  README.md  vcpkg.json
dependencies/: fisqrt.h
include/backend/: Game.h
include/entities/: Entity.h  EntityManager.h
include/frontend/: App.h  GUI.h  Renderer.h  RendererEnums.h  Solar.h  SolarView.h
include/math/: math.h
include/physics/: ExplEulerSolver.h  Object.h  PhysicsObject.h  PhysicsWorld.h  RKSolver.h  Solver.h  SolverTest.h
src/: CMakeLists.txt  main.cpp
src/backend/: CMakeLists.txt  Game.cpp  Game.h
src/entities/: CMakeLists.txt  Entity.h  EntityManager.cpp  EntityManager.h
src/frontend/: App.cpp  App.h  CMakeLists.txt  GUI.cpp  GUI.h  Renderer.cpp  Renderer.h  Solar.cpp  SolarView.cpp  SolarView.h  main.cpp
src/math/: CMakeLists.txt  math.cpp  math.h
src/misc/: Log.h  LogSink.h
src/physics/: CMakeLists.txt  PhysicsWorld.cpp  PhysicsWorld.h  SolverTest.cpp
